# M4Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  celery_worker.py  docker-compose.yml  pyproject.toml
app/: config.py  main.py  tasks.py
app/db/: db.py  models.py  types.py
app/news_parser/: sites.py
app/tests/: test_tasks.py
