[project]
name = "aibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bs4>=0.0.2",
    "celery>=5.6.3",
    "fastapi>=0.135.3",
    "gevent>=26.4.0",
    "openai>=2.31.0",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "telephone>=0.0.5",
    "telethon>=1.42.0",
    "uvicorn>=0.44.0",
]
